--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
   "bot": {
-    "prefix": "!",
+    "prefix": "*",
     "adminOnly": true,
     "rateLimits": {
-      "likes": 200,
-      "follows": 50,
-      "comments": 30
+      "likes": 0,
+      "follows": 10000,
+      "comments": 0
     }
   },
   "instagram": {
-    "username": "your_instagram_username",
-    "password": "your_instagram_password",
+    "username": "kianoyamat",
+    "password": "0Astoasto",
     "apiTimeout": 30000
   },
-  "adminUsers": ["admin123", "mod456"],
+  "adminUsers": ["oyamatmots"],
   "autoReconnect": true,
   "loggingLevel": "info"
 }
